refactor: use published version catalog for ktor refactor: use official rate limit plugin